--- a/Citas.html
+++ b/Citas.html
@@ -122,7 +122,7 @@
             },
 
             getCitas() {
-                axios.get('https://3.145.13.45:5000/citas')
+                axios.get('http://52.15.253.41:5000/citas')
                     .then(response => {
                         console.log(response)
                         this.citas = response.data.Citas
@@ -133,9 +133,9 @@
             },
 
             onSubmit() {
-                axios.get('https://3.145.13.45:5000/paciente/${this.IdPaciente}')
-                axios.get('https://3.145.13.45:5000/schedule/${this.IdSchedule}')
-                axios.post('https://3.145.13.45:5000/cita', {
+                axios.get('http://52.15.253.41:5000/paciente/${this.IdPaciente}')
+                axios.get('http://52.15.253.41:5000/schedule/${this.IdSchedule}')
+                axios.post('http://52.15.253.41:5000/cita', {
                   IdPaciente: this.IdPaciente,
                   IdSchedule: this.IdSchedule
                 })
@@ -151,7 +151,7 @@
             },
 
             editCita(idCita, IdPaciente, IdSchedule) {
-              axios.get('https://3.145.13.45:5000/cita/' + idCita)
+              axios.get('http://52.15.253.41:5000/cita/' + idCita)
                 .then(response => {
                   this.eidCita = idCita;
                   this.IdPaciente = IdPaciente;
@@ -164,7 +164,7 @@
             },
 
             onUpdate() {
-              const url = 'https://3.145.13.45:5000/cita/' + this.eidCita;
+              const url = 'http://52.15.253.41:5000/cita/' + this.eidCita;
 
               axios.put(url,{
                 IdPaciente: this.IdPaciente,
