--- a/Especialidades.html
+++ b/Especialidades.html
@@ -129,7 +129,7 @@
             },
 
             getTratamientos() {
-                axios.get('https://3.145.13.45:5000/especialidadmedicos')
+                axios.get('http://52.15.253.41:5000/especialidadmedicos')
                     .then(response => {
                         console.log(response)
                         this.esps = response.data.EspecialidadMedico;
@@ -140,7 +140,7 @@
             },
 
             onSubmit(){
-                axios.post('https://3.145.13.45:5000/especialidadmedico', {
+                axios.post('http://52.15.253.41:5000/especialidadmedico', {
                   nombreM: this.nombreM,
                   apellidoPM: this.apellidoPM,
                   apellidoMM: this.apellidoMM,
