--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -144,7 +144,7 @@
             },
 
             getTratamientos() {
-                axios.get('https://3.145.13.45:5000/tratamientos')
+                axios.get('http://52.15.253.41:5000/tratamientos')
                     .then(response => {
                         console.log(response)
                         this.tratamientos = response.data.Tratamientos
@@ -155,8 +155,8 @@
             },
 
             onSubmit() {
-              axios.get('https://3.145.13.45:5000/cita/${this.idCita}')
-              axios.post('https://3.145.13.45:5000/tratamiento',{
+              axios.get('http://52.15.253.41:5000/cita/${this.idCita}')
+              axios.post('http://52.15.253.41:5000/tratamiento',{
                 descripcion: this.descripcion,
                 duracion: this.duracion,
                 tratamiento: this.tratamiento,
@@ -176,7 +176,7 @@
 
 
             editTratamiento(idTratamiento, descripcion, duracion, tratamiento, idCita) {
-              axios.get('https://3.145.13.45:5000/tratamiento/' + idTratamiento)
+              axios.get('http://52.15.253.41:5000/tratamiento/' + idTratamiento)
               .then(response => {
                 this.eidTratamiento = idTratamiento;
                 this.edescripcion = descripcion;
@@ -191,7 +191,7 @@
             },
 
             onUpdate() {
-              const url = 'https://3.145.13.45:5000/tratamiento/' + this.eidTratamiento;
+              const url = 'http://52.15.253.41:5000/tratamiento/' + this.eidTratamiento;
               
               axios.put(url, {
                 descripcion: this.edescripcion,
