--- a/menuP.html
+++ b/menuP.html
@@ -88,7 +88,7 @@
 
                 getPacientes(){
                         axios({
-                        url:'https://3.145.13.45:5000/paciente/1',
+                        url:'http://52.15.253.41:5000/paciente/1',
                         method: 'get',
                     })
                     .then(response => {
